TEST_PROGRAMS/INVALID/yu_hua/e.min
var z: string;
z = "lalaland*";
